<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="hint_name">Name</string>
    <string name="plus" translatable="false" >+</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero" translatable="false">1</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">ORDER</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total: $</string>
    <string name="add_chocolate">Add chocolate? </string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="order_name">
        Name: <xliff:g id="name" example="Igor">%1$s</xliff:g>
    </string>
</resources>
